--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,15 @@ after_sucess:
   - docker push atom49/multi-ngnix
   - docker push atom49/multi-server
   - docker push atom49/multi-worker
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-2"
+  app: "multi-docker"
+  env: "Mutltidocker-env"
+  bucket_name: "elasticbeanstalk-us-east-2-406056975933"
+  bucket_path: "docker-multi"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
